--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.0.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.9.0",
     "react-hook-form": "^6.9.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
